fix collapsed issue, also renames js file

--- a/modules/custom/az_stat/css/az-stat-widget.css
+++ b/modules/custom/az_stat/css/az-stat-widget.css
@@ -25,10 +25,11 @@ tr.odd .az-stat-elements .form-item {
 }
 
 .az-stat-elements.az-stat-elements-closed .form-type--linkit,
+.az-stat-elements.az-stat-elements-closed .js-form-type-linkit,
 .az-stat-elements.az-stat-elements-closed .form-type--textfield,
 .az-stat-elements.az-stat-elements-closed .form-type--textarea,
 .az-stat-elements.az-stat-elements-closed .filter-wrapper,
 .az-stat-elements.az-stat-elements-closed .form-type--select,
 .az-stat-elements.az-stat-elements-closed .media-library-form-element {
-  display: none;
+  display: none !important;
 }
